<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.ahgitdevelopment.groupfilmmanager.ui.moviemanger.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies">
        <argument
            android:name="isFavourite"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_addMovie"
            app:destination="@id/navigation_addMovie"
            app:popUpTo="@id/navigation_movies" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.ahgitdevelopment.groupfilmmanager.ui.moviemanger.ui.movies.MoviesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites">

        <argument
            android:name="isFavourite"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/navigation_addMovie"
        android:name="com.ahgitdevelopment.groupfilmmanager.ui.moviemanger.ui.addmovie.AddMovieFragment"
        android:label="@string/title_addMovie"
        tools:layout="@layout/fragment_addmovie" />

</navigation>